Fix broken floating-point constants in Kexi SQL queries

Summary:
Bonus: After parsing numbers are now kept losslessly as byte arrays, so with unlimited precision.

BUG:352363
FIXED-IN:2.9.8

Test Plan: See "Steps to Reproduce" at https://bugs.kde.org/show_bug.cgi?id=352363

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D333