libs/db/parser/sqlparser.y
@@ -407,7 +407,7 @@
 
 %type <colType> SQL_TYPE
 %type <integerValue> INTEGER_CONST
-%type <realValue> REAL_CONST
+%type <binaryValue> REAL_CONST
 /*%type <integerValue> SIGNED_INTEGER */
 
 %{
@@ -476,9 +476,9 @@ extern "C"
 
 %union {
     QString* stringValue;
+    QByteArray* binaryValue;
     qint64 integerValue;
     bool booleanValue;
-    struct realType realValue;
     KexiDB::Field::Type colType;
     KexiDB::Field *field;
     KexiDB::BaseExpr *expr;
@@ -1091,8 +1091,9 @@ aExpr9:
 }
 | REAL_CONST
 {
-    $$ = new ConstExpr( REAL_CONST, QPoint( $1.integer, $1.fractional ) );
-    KexiDBDbg << "  + real constant: " << $1.integer << "." << $1.fractional;
+    $$ = new ConstExpr( REAL_CONST, *$1 );
+    KexiDBDbg << "  + real constant: " << *$1;
+    delete $1;
 }
 |
 aExpr10
